# hw3-squiroz621

./: LOSC_Event_tutorial.ipynb  _toc.yml  myst.yml
.github/workflows/: deploy.yml
_build/site/: config.json  myst.search.json  objects.inv
_build/site/content/: hw03-description.json  index.json  losc-event-tutorial.json  readme.json
_build/site/public/: LOSC_Event_tutorial-7698278394b3b04e8b2cda3d5f18bf58.ipynb
ligotools/: pyproject.toml  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
